Added localization. Added pages for most Conditions

--- a/EncyclopediaExpanded/EncyclopediaExpanded.csproj
+++ b/EncyclopediaExpanded/EncyclopediaExpanded.csproj
@@ -41,6 +41,9 @@
     <Reference Include="Assembly-CSharp_publicized">
       <HintPath>..\..\Assembly-CSharp_publicized.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Owlcat.Runtime.Core">
       <HintPath>..\..\..\Pathfinder Second Adventure Debug\Wrath_Data\Managed\Owlcat.Runtime.Core.dll</HintPath>
     </Reference>
@@ -84,6 +87,9 @@
     <Compile Include="Main.cs" />
     <Compile Include="PageCreator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
