Change version to 1.0

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,7 @@ MigrationBackup/
 FodyWeavers.xsd
 /ZipMaking/EncyclopediaExpanded
 /ZipMaking
+/Capture5.PNG
+/Capture4.PNG
+/Capture3.PNG
+/Capture2.PNG
